<resources>
    <string name="app_name">Library</string>

    <string name="activity_name">Data</string>
    <string name="activity_title_debug">Debug</string>
    <string name="activity_title_db">@string/navigation_title_db</string>

    <string name="cat_title_name">Name</string>
    <string name="cat_title_email">Email</string>
    <string name="cat_title_phone_number">Phone number</string>
    <string name="cat_title_word">Word</string>
    <string name="cat_title_sentence">Sentence</string>
    <string name="cat_title_paragraph">Paragraph</string>
    <string name="cat_title_website">Website</string>

    <string name="action_title_refresh">Refresh</string>

    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_data">Data</string>
    <string name="navigation_title_debug">Debug</string>
    <string name="navigation_title_db">Database</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="text_debug_instructions">Please check logcat.</string>
    <string name="text_debug_enabled">Debugging is enabled.</string>
    <string name="text_debug_not_enabled">Debugging is not enabled.</string>
    <string name="text_debug_default_tag">Debugger is using the default tag %1$s.</string>

<string name="hint_user_name">Name</string>
    <string name="hint_user_surname">Surname</string>
    <string name="hint_user_phone">Phone</string>
    <string name="hint_user_note">Note</string>
    <string name="hint_user_db_id">Db ID</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_load">Load</string>

    <string name="error_db_id_not_long">Db id must be a number.</string>
    <string name="error_db_id_does_not_exist">Db id does not exist.</string>
    <string name="success_user_db_saved">User saved to id %1$s</string>
</resources>
