<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/inc_toolbar"/>

    <LinearLayout
        style="@style/ActivityWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_user_db_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/hint_user_db_id"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/hint_user_name"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/edit_user_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/hint_user_surname"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/edit_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/hint_user_phone"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/edit_user_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/hint_user_note"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/button_cancel"/>

            <Button
                android:id="@+id/button_load"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/button_load"/>

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_save"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>